--- a/git/.gitignore
+++ b/git/.gitignore
@@ -10,7 +10,7 @@ ehthumbs.db
 
 # Jupyter Notebooks #
 #####################
-.ipynb_checkpoints/*
+.ipynb_checkpoints
 
 # Binaries #
 ############
